--- a/src/Pages/Cardapio/style.css
+++ b/src/Pages/Cardapio/style.css
@@ -272,6 +272,7 @@ body {
   .tabela th, .tabela td {
     padding: var(--space-xs) var(--space-sm);
     font-size: 0.9rem;
+    overflow-y: scroll;
   }
 }
 
